resources/dsaas-stg/dsaas-preview/openshift-io.route.yaml
##################
# Warning: this route is still being used to redirect traffic from
# openshift.io to https://developers.redhat.com/developer-sandbox
##################
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: wwwopenshiftio
  name: openshift-io
spec:
  host: prod-preview.openshift.io
  port:
    targetPort: "8080"
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: redirector
    weight: 100
  wildcardPolicy: None
